# FluencyAI

./: .gitignore  docker-compose.yaml  task.md
backend/: .gitignore  DB diagram.md  Dockerfile  alembic.ini  pyproject.toml  requiredments.txt  requirements.txt  script.py
backend/api/: config.py  main.py  tasks.py  worker.py
backend/api/auth/: __init__.py  auth_curd.py  auth_routes.py
backend/api/crud/: session_record_crud.py  user_crud.py
backend/api/crud/session_record/: __init__.py  create.py  get.py
backend/api/crud/session_report/: get.py
backend/api/crud/users/: create.py  get.py
backend/api/db/: __init__.py  database.py
backend/api/db/alembic/: env.py
backend/api/db/model/: post.py  sessions.py  user.py  users.py
backend/api/db/models/: __init__.py  session_records.py  session_report.py  users.py
backend/api/exceptions/: user_exceptions.py  users_ecceptions.py
backend/api/gemini/: __init__.py  generate_report.py  utils.py
backend/api/routes/: __init__.py  auth_routes.py  session_records_filter_routes.py  session_records_routes.py  session_reports_routes.py  user_routes.py
backend/api/routes/auth/: auth_routes.py
backend/api/routes/sessions/: session_routes.py
backend/api/routes/users/: routes.py  user_routes.py
backend/api/schema/: auth.py  auth_schema.py  session_record_schema.py  session_report_schema.py  sessions_schema.py  user_schema.py
backend/api/utils/: constants.py  hasher.py
backend/api/validators/: auth_validator.py  users.py
backend/api/views/auth/: auth_view.py
backend/api/views/sessions/: session_view.py
(+91 files in other folders)
